[package]
name = "game"
version = "0.1.0"
authors = ["Shinichi Kogai <kogai0121@gmail.com>"]
license = ""
description = ""
repository = ""

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen="0.2"
# wee_alloc = "0.4.2"

[profile.release]
lto = true
opt-level = 's'


# [build]
# target = "wasm32-unknown-unknown"
